--- a/production/ob_destination.html
+++ b/production/ob_destination.html
@@ -80,6 +80,7 @@
           </div>
         </div>
 
+
         <!-- top navigation -->
         <div class="top_nav">
           <div class="nav_menu">
@@ -95,11 +96,11 @@
         <!-- page content -->
         <div class="right_col" role="main">
 
-          <!-- show all list of campaigns -->
+          <!-- show all list of destinations -->
           <div class="row">
             <div class="x_panel">
               <div class="x_title">
-                <h2>Campaign list info <small>Show the list of all campaigns.</small></h2>
+                <h2>Destination list info <small>Show the list of all destinations.</small></h2>
                 <ul class="nav navbar-right panel_toolbox">
                   <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                   </li>
@@ -118,16 +119,16 @@
                 <div class="clearfix"></div>
               </div>
               <div class="x_content">
-                <table id="campaign_list_table" class="table table-striped table-bordered table-condensed"></table>
+                <table id="destination_list_table" class="table table-striped table-bordered table-condensed"></table>
               </div>
             </div>
           </div>
 
-          <!-- Show detail campaign info -->
+          <!-- Show detail destination info -->
           <div class="row">
             <div class="x_panel">
               <div class="x_title">
-                <h2>Campaign detail info <small>Show the specified campaign's detail info.</small></h2>
+                <h2>Destination detail info <small>Show the specified destination's detail info.</small></h2>
                 <ul class="nav navbar-right panel_toolbox">
                   <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                   </li>
@@ -154,65 +155,73 @@
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">UUID</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="campaign_detail_uuid">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="destination_detail_uuid">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Name</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_name">
+                        <input type="text" class="form-control" placeholder="" id="destination_detail_name">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Description</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_description">
+                        <input type="text" class="form-control" placeholder="" id="destination_detail_description">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Status</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Type</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_status">
+                        <input type="text" class="form-control" placeholder="" id="destination_detail_type">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Plan</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Application</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_plan">
+                        <input type="text" class="form-control" placeholder="" id="destination_detail_application">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Destination</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">data</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_destination">
+                        <input type="text" class="form-control" placeholder="" id="destination_detail_data">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dial list master</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">context</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_dlma">
+                        <input type="text" class="form-control" placeholder="" id="destination_detail_context">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">exten</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="destination_detail_exten">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">priority</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="destination_detail_priority">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Variables</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_variables">
+                        <input type="text" class="form-control" placeholder="" id="destination_detail_variables">
                       </div>
                     </div>
 
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Next campaign</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_next_campaign">
-                      </div>
-                    </div>
 
                   </form>
                 </div>
@@ -221,87 +230,33 @@
                   <!-- <p class="lead" align="center">Other info</p> -->
 
                   <form class="form-horizontal form-label-left">
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule mode</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_mode">
-                      </div>
-                    </div>
 
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule time start</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_time_start">
-                      </div>
-                    </div>
-
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule time end</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_time_end">
-                      </div>
-                    </div>
-
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule date start</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_date_start">
-                      </div>
-                    </div>
-
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule date end</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_date_end">
-                      </div>
-                    </div>
-
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule date list</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_date_list">
-                      </div>
-                    </div>
-
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule date list except</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_date_list_except">
-                      </div>
-                    </div>
-
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule day list</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_day_list">
-                      </div>
-                    </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">In use</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="campaign_detail_in_use">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="destination_detail_in_use">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Time create</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="campaign_detail_tm_create">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="destination_detail_tm_create">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Time update</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="campaign_detail_tm_update">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="destination_detail_tm_update">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Time delete</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="campaign_detail_tm_delete">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="destination_detail_tm_delete">
                       </div>
                     </div>
 
@@ -309,12 +264,13 @@
 
                 </div>
 
-                <div align="right">
-                  <button type="button" id="campaign_detail_button_create" onclick="bt_create_campaign_detail()" class="btn btn-primary btn-lg">Create</button>
-                  <button type="button" id="campaign_detail_button_update" onclick="bt_update_campaign_detail()" class="btn btn-success btn-lg">Update</button>
-                  <button type="button" id="campaign_detail_button_delete" onclick="bt_delete_campaign_detail()" class="btn btn-danger btn-lg">Delete</button>
-                </div>
               </div> <!-- <div class="x_content"> -->
+
+              <div align="right">
+                <button type="button" id="campaign_detail_button_create" onclick="bt_create_destination_detail()" class="btn btn-primary btn-lg">Create</button>
+                <button type="button" id="campaign_detail_button_update" onclick="bt_update_destination_detail()" class="btn btn-success btn-lg">Update</button>
+                <button type="button" id="campaign_detail_button_delete" onclick="bt_delete_destination_detail()" class="btn btn-danger btn-lg">Delete</button>
+              </div>
 
             </div>
           </div> <!-- row -->
@@ -392,7 +348,7 @@
     <script src="../build/js/custom.min.js"></script>
 
     <!-- -->
-    <script src="./js/ob/ob_campaign.js"></script>
+    <script src="./js/ob/ob_destination.js"></script>
 
   </body>
 </html>
