--- a/production/ob_plan.html
+++ b/production/ob_plan.html
@@ -80,6 +80,7 @@
           </div>
         </div>
 
+
         <!-- top navigation -->
         <div class="top_nav">
           <div class="nav_menu">
@@ -95,11 +96,11 @@
         <!-- page content -->
         <div class="right_col" role="main">
 
-          <!-- show all list of campaigns -->
+          <!-- show all list of plans -->
           <div class="row">
             <div class="x_panel">
               <div class="x_title">
-                <h2>Campaign list info <small>Show the list of all campaigns.</small></h2>
+                <h2>Plan list info <small>Show the list of all plans.</small></h2>
                 <ul class="nav navbar-right panel_toolbox">
                   <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                   </li>
@@ -118,16 +119,16 @@
                 <div class="clearfix"></div>
               </div>
               <div class="x_content">
-                <table id="campaign_list_table" class="table table-striped table-bordered table-condensed"></table>
+                <table id="plan_list_table" class="table table-striped table-bordered table-condensed"></table>
               </div>
             </div>
           </div>
 
-          <!-- Show detail campaign info -->
+          <!-- Show detail plan info -->
           <div class="row">
             <div class="x_panel">
               <div class="x_title">
-                <h2>Campaign detail info <small>Show the specified campaign's detail info.</small></h2>
+                <h2>Plan detail info <small>Show the specified plan's detail info.</small></h2>
                 <ul class="nav navbar-right panel_toolbox">
                   <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                   </li>
@@ -154,65 +155,95 @@
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">UUID</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="campaign_detail_uuid">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="plan_detail_uuid">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Name</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_name">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_name">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Description</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_description">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_description">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Status</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Tech name</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_status">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_tech_name">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Plan</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Trunk name</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_plan">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_trunk_name">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Destination</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dial mode</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_destination">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_dial_mode">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dial list master</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dial timeout</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_dlma">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_dial_timeout">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Dial list end handle</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_dl_end_handle">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Caller id</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_caller_id">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Service level</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_service_level">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Early media</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_early_media">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Codecs</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_codecs">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Variables</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_variables">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_variables">
                       </div>
                     </div>
 
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Next campaign</label>
-                      <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_next_campaign">
-                      </div>
-                    </div>
+
 
                   </form>
                 </div>
@@ -221,87 +252,95 @@
                   <!-- <p class="lead" align="center">Other info</p> -->
 
                   <form class="form-horizontal form-label-left">
+
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule mode</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Retry delay</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_mode">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_retry_delay">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule time start</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Max retry count 1</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_time_start">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_max_retry_count_1">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule time end</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Max retry count 2</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_time_end">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_max_retry_count_2">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule date start</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Max retry count 3</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_date_start">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_max_retry_count_3">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule date end</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Max retry count 4</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_date_end">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_max_retry_count_4">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule date list</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Max retry count 5</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_date_list">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_max_retry_count_5">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule date list except</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Max retry count 6</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_date_list_except">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_max_retry_count_6">
                       </div>
                     </div>
 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Schedule day list</label>
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Max retry count 7</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" placeholder="" id="campaign_detail_sc_day_list">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_max_retry_count_7">
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-3 col-xs-12">Max retry count 8</label>
+                      <div class="col-md-9 col-sm-9 col-xs-12">
+                        <input type="text" class="form-control" placeholder="" id="plan_detail_max_retry_count_8">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">In use</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="campaign_detail_in_use">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="plan_detail_in_use">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Time create</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="campaign_detail_tm_create">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="plan_detail_tm_create">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Time update</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="campaign_detail_tm_update">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="plan_detail_tm_update">
                       </div>
                     </div>
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">Time delete</label>
                       <div class="col-md-9 col-sm-9 col-xs-12">
-                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="campaign_detail_tm_delete">
+                        <input type="text" class="form-control" readonly="readonly" placeholder="" id="plan_detail_tm_delete">
                       </div>
                     </div>
 
@@ -309,12 +348,13 @@
 
                 </div>
 
-                <div align="right">
-                  <button type="button" id="campaign_detail_button_create" onclick="bt_create_campaign_detail()" class="btn btn-primary btn-lg">Create</button>
-                  <button type="button" id="campaign_detail_button_update" onclick="bt_update_campaign_detail()" class="btn btn-success btn-lg">Update</button>
-                  <button type="button" id="campaign_detail_button_delete" onclick="bt_delete_campaign_detail()" class="btn btn-danger btn-lg">Delete</button>
-                </div>
               </div> <!-- <div class="x_content"> -->
+
+              <div align="right">
+                <button type="button" id="campaign_detail_button_create" onclick="bt_create_plan_detail()" class="btn btn-primary btn-lg">Create</button>
+                <button type="button" id="campaign_detail_button_update" onclick="bt_update_plan_detail()" class="btn btn-success btn-lg">Update</button>
+                <button type="button" id="campaign_detail_button_delete" onclick="bt_delete_plan_detail()" class="btn btn-danger btn-lg">Delete</button>
+              </div>
 
             </div>
           </div> <!-- row -->
@@ -392,7 +432,7 @@
     <script src="../build/js/custom.min.js"></script>
 
     <!-- -->
-    <script src="./js/ob/ob_campaign.js"></script>
+    <script src="./js/ob/ob_plan.js"></script>
 
   </body>
 </html>
